--- a/src/NavCustom.css
+++ b/src/NavCustom.css
@@ -48,7 +48,6 @@
     height: 100vh;
     width: 280px;
     position: fixed;
-    /* right: -280px; */
     transform: translateX(280px);
     -webkit-transform: translateX(280px);
     will-change: transform;
@@ -57,9 +56,14 @@
     z-index: 1000;
     padding: 100px 3em;
     text-align: right;
-    /* transition-delay: 0.11s; */
-    transition-duration: 0.33s;
-    transition-timing-function: cubic-bezier(0.44, 0, 0, 1);
+    -webkit-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -moz-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -o-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -moz-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -o-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
 
 .nav-menu-active {
