--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,8 +2,8 @@
     position: fixed;
     z-index: 500;
     top: 3em;
-    right: 4em;
-    border: 2px solid #F6511D;
+    right: 3em;
+    border: 1px solid #F45B69;
     width: 4em;
     padding: 0.33em 0.33em 0.11em 0.33em;
     transition-duration: 0.33s;
@@ -14,16 +14,23 @@
 }
 
 .nav-icon-item:hover {
-    background: #F6511D;
-    color: #FDFFFC;
-    /* opacity: 0.88; */
     cursor: pointer;
-    transform: scale(1.3);
+    border: 1px dashed #F45B69;
+    animation: rotation 3s infinite linear;
 }
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 
 .nav-modal {
     opacity: 0;
-    background: white;
+    background: #FFFFFF;
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -44,18 +51,15 @@
 
 .nav-menu {
     text-align: center;
-    background: #071013;
+    background: #222222;
     height: 100vh;
-    width: 280px;
+    width: 180px;
     position: fixed;
-    transform: translateX(280px);
-    -webkit-transform: translateX(280px);
-    will-change: transform;
-    right: 0;
+    right: -180px;
     top: 0;
     z-index: 1000;
-    padding: 100px 3em;
-    text-align: right;
+    padding: 100px 3em; 
+    will-change: transform;
     -webkit-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
     -moz-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
     -o-transition: all 333ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
@@ -67,43 +71,46 @@
 }
 
 .nav-menu-active {
-    transform: translateX(0px);
-    -webkit-transform: translateX(0px);
+    transform: translateX(-180px);
+    -webkit-transform: translateX(-180px);
 }
 
 .link {
     opacity: 0;
     transition-delay: 0.2s;
     transition-duration: 0.55s;
-    right: 2em;
+    left: 2em;
     position: absolute;
     will-change: opacity;
 }
 
 .link-active {
     opacity: 1;
-    /* transform: translateX(-1em); */
 }
 
 .link-menu {
+    text-align: left;
     text-decoration: none;
-    color: #FDFFFC;
-    font-size: 2em;
+    color: #FFFFFF;
     opacity: 0.55;
-    margin: .33em;
+    margin: 0;
     padding: 0;
-    transition-property: transform, opacity;
-    transition: 0.33s;
+    transition-property: opacity;
+    transition-duration: 0.33s;
     display: block;
 }
 
 .link-menu:hover {
     opacity: 1;
-    transform: translateX(-0.1em) scale(1.02);
     text-decoration: none;
-    color: #FDFFFC;
+    color: #FFFFFF;
 }
 
 ul {
     list-style-type: none;
 }
+
+.link-active-route {
+    color: #F45B69;
+    opacity: 1;
+  }
