--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,36 @@
-/* google font import */
+/* Import Google Fonts here. */
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Jomolhari&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Amiri&display=swap');
-
-html {
-  font-size: 1em;
-}
-
-body {
-  margin: 0;
-  /* font-family: 'Quicksand', sans-serif; */
-  /* font-family: 'Jomolhari', serif; */
-  /* font-family: 'Crimson Text', serif; */
-  font-family: 'Amiri', serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  /* max-height: 100vh; */
-  background: #FDFFFC;
-  /* padding: 1em;  */
-  /* overflow: hidden; */ 
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-/* important to remove the reactstrap */
+html {
+  /* set units here for future scaling with em and rem */
+  background: #FFFFFF;
+  color: #222222;
+}
+
+body {
+  font-family: 'Quicksand', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #1C5D99;
+}
+
+/* needed to remove the reactstrap focus - can always be re-enabled for accessibility */
 .btn:focus {
   outline: none !important;
   border: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
+}
+
+.page {
+  padding-top: 6em;
 }
 
