--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 0em;
+}
+
 /* ----- End base styles for html tags ----- ----- */
 
 
