--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,11 @@ body {
   font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: rgba(27, 27, 30, 0.815);
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: black;
+  color: #1B1B1E;
   /* font-weight: 700; */
 }
 
@@ -46,8 +47,13 @@ ul {
   transition-property: all;
   transition-duration: 0.11s;
   -moz-transition-duration: 0.11s;
-  border-radius: 3em;
-  padding: 0.2em 1.33em
+  border-radius: 1em;
+  padding: 0.2em 1.11em;
+  margin-right: 1em;
+  /* text-transform: uppercase; */
+  font-weight: 700;
+  background: #F64740;
+  border: 1px solid #F64740;
 }
 
 /* ----- Base button focus styling ----- */
@@ -63,6 +69,8 @@ ul {
 .btn:hover {
   cursor: pointer;
   filter: invert(0.1);
+  background: #F64740;
+  border: 1px solid #F64740;
 }
 
 /* ----- Generic base styling for pages (Routes) ----- */
