--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 html {
   /* set units here for future scaling with em and rem */ 
   background: #292F36;
-  color: #292F36;
+  color: white;
 }
 
 body {
