--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ Components should be placed in their own directories with stylesheets for each. 
 /* ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== = */
 
 /* Import Google Fonts here. */
-@import url('https://fonts.googleapis.com/css?family=Gothic+A1:300,400,500,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto&display=swap');
 
 /* ----- Begin base styles for html tags ----- --- */
 
@@ -21,20 +21,23 @@ html {
 }
 
 body {
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgba(27, 27, 30, 0.815);
+  font-size: 18px;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'Bebas Neue', cursive;
   color: #1B1B1E;
   font-weight: 700;
+  line-height: 80%;
 }
 
 h1 {
-  font-size: 6em;
-  text-transform: uppercase;
+  font-size: 10rem;
+  color: #6F2DBD;
 }
 
 p {
@@ -50,6 +53,9 @@ ol {
   padding-left: 1em;
 }
 
+a, a:hover {
+  color: #FF4E00;
+}
 /* ----- End base styles for html tags ----- ----- */
 
 
@@ -60,14 +66,14 @@ ol {
 /* .container {
   background: blue;
   padding: 3rem;
-}
+} */
 
 .row {
-  background: lightsteelblue;
-  padding: 1rem;
+  /* background: lightsteelblue; */
+  margin-bottom: 2rem;
 }
 
-.col {
+/* .col {
   background: lightskyblue;
   padding: 1rem;
 } */
@@ -81,8 +87,8 @@ ol {
   padding: 0.2em 1.11em;
   margin-right: 1em;
   font-weight: 500;
-  background: #00A1E4;
-  border: 1px solid #00A1E4;
+  background: black;
+  border: 1px solid black;
 }
 
 /* ----- Base button focus styling ----- */
@@ -92,15 +98,15 @@ ol {
   border: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  border: 1px solid #00A1E4;
+  border: 1px solid black;
 }
 
 /* ----- Base button hover styling ----- */
 .btn:hover {
   cursor: pointer;
-  filter: invert(0.1);
-  background: #00A1E4;
-  border: 1px solid #00A1E4;
+  filter: invert(0.2);
+  background: black;
+  border: 1px solid black;
 }
 
 /* ----- Generic base styling for pages (Routes) ----- */
