--- a/src/components/NavStateless/index.css
+++ b/src/components/NavStateless/index.css
@@ -1,10 +1,9 @@
 
 .nav-icon {
-    position: fixed;
+    position: absolute;
     z-index: 500;
     top: 1rem;
     right: 1rem;
-    /* width: 3rem; */
     border: none;
     padding: 1rem;
     background: black;
@@ -22,7 +21,7 @@
     top: 0;
     transition-property: transform;
     transition-duration: 300ms;
-    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-timing-function: cubic-bezier(0.15, 0.46, 0.45, 0.94);
 }
 
 .is-nav-open {
