--- a/src/components/NavStateless/index.css
+++ b/src/components/NavStateless/index.css
@@ -1,9 +1,9 @@
 
 .nav-icon {
     position: absolute;
-    z-index: 500;
+    z-index: 300;
     top: 1rem;
-    right: 1rem;
+    left: 1rem;
     border: none;
     padding: 1rem;
     background: black;
@@ -11,19 +11,80 @@
 }
 
 .nav__body {
-    background: black;
-    width: 200px;
+    background: rgba(0, 0, 0, 1);
+    width: 300px;
     height: 100vh;
-    padding: 1rem;
+    padding: 3rem;
     position: fixed;
     z-index: 1000;
-    right: -200px;
+    right: -315px;
     top: 0;
     transition-property: transform;
-    transition-duration: 300ms;
-    transition-timing-function: cubic-bezier(0.15, 0.46, 0.45, 0.94);
+    transition-duration: 400ms;
+    transition-timing-function: ease;
+    -webkit-transition-property: transform;
+    -webkit-transition-duration: 400ms;
+    -webkit-transition-timing-function: ease;
+    will-change: transform;
+    -webkit-will-change: transform;
+    /* opacity: 0.6; */
 }
 
 .is-nav-open {
-    transform: translateX(-200px);
+    transform: translateX(-300px);
+    /* opacity: 1; */
 }
+
+.nav-logo {
+    color: #ffffff;
+    margin-bottom: 1em;
+    font-size: 3rem;
+}
+
+.nav-link {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 2rem;
+    line-height: 1.9rem;
+    font-weight: 500;
+    text-decoration: none;
+    color: #FFFFFF;
+    opacity: 0.55;
+    margin: 0;
+    padding: 0 !important;
+    display: block;
+}
+
+.nav-link:hover {
+    opacity: 1;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.nav-link-active {
+    color: #FF4E00;
+    opacity: 1;
+  }
+
+.nav-modal {
+pointer-events: none;
+background: black;
+height: 100vh;
+width: 100%;
+z-index: 500;
+opacity: 0;
+position: fixed;
+top: 0;
+left: 0;
+transition-property: opacity;
+transition-duration: 300ms;
+-webkit-transition-property: opacity;
+-webkit-transition-duration: 300ms;
+will-change: opacity;
+}
+
+
+
+  .is-nav-modal-active {
+      pointer-events: all;
+      opacity: 0.5;
+  }
