--- a/src/components/NavStateless/index.css
+++ b/src/components/NavStateless/index.css
@@ -1,23 +1,59 @@
+/* ===== NAV CUSTOM STYLES ===== */
 
+/* ----- Begin Nav Icon ----- */
 .nav-icon {
-    position: absolute;
-    z-index: 300;
-    top: 1rem;
-    left: 1rem;
-    border: none;
-    padding: 1rem;
-    background: black;
-    color: white !important;
+    position: fixed;
+    z-index: 500;
+    top: 2rem;
+    right: 2rem;
+    padding: 0.2em 0.5em 0.2em 0.5em;
+    font-size: 1rem;
+    background: #F61067;
+    color: white;
+    border: 1px solid #F61067;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 110ms;
 }
+
+.nav-icon:hover {
+    filter: invert(0.1);
+}
+/* ----- End Nav Icon ------- */
+
+/* ----- Begin Nav Modal ----- */
+.nav-modal {
+    pointer-events: none;
+    background: black;
+    height: 100vh;
+    width: 100%;
+    z-index: 750;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition-property: opacity;
+    transition-duration: 270ms;
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: 270ms;
+    will-change: opacity;
+}
+
+.is-nav-modal-active {
+    pointer-events: all;
+    opacity: 0.8;
+    transition: 280ms;
+  }
+  /* ----- End Nav Modal ------- */
 
 .nav__body {
     background: rgba(0, 0, 0, 1);
-    width: 300px;
+    width: 270px;
     height: 100vh;
-    padding: 3rem;
+    padding: 12rem 3rem;
     position: fixed;
     z-index: 1000;
-    right: -315px;
+    right: -290px;
     top: 0;
     transition-property: transform;
     transition-duration: 400ms;
@@ -31,7 +67,7 @@
 }
 
 .is-nav-open {
-    transform: translateX(-300px);
+    transform: translateX(-280px);
     /* opacity: 1; */
 }
 
@@ -41,10 +77,20 @@
     font-size: 3rem;
 }
 
+.nav-list {
+    opacity: 0;
+    transition: opacity;
+    transition-duration: 500ms;
+    transition-delay: 250ms;
+}
+
+.is-nav-list-open {
+    opacity: 1;
+}
+
 .nav-link {
     font-family: 'Bebas Neue', cursive;
     font-size: 2rem;
-    line-height: 1.9rem;
     font-weight: 500;
     text-decoration: none;
     color: #FFFFFF;
@@ -61,30 +107,7 @@
 }
 
 .nav-link-active {
-    color: #FF4E00;
+    color: #00F0B5;
     opacity: 1;
   }
 
-.nav-modal {
-pointer-events: none;
-background: black;
-height: 100vh;
-width: 100%;
-z-index: 500;
-opacity: 0;
-position: fixed;
-top: 0;
-left: 0;
-transition-property: opacity;
-transition-duration: 300ms;
--webkit-transition-property: opacity;
--webkit-transition-duration: 300ms;
-will-change: opacity;
-}
-
-
-
-  .is-nav-modal-active {
-      pointer-events: all;
-      opacity: 0.5;
-  }
