--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 10rem;
-  color: #6F2DBD;
+  color: #5E239D;
 }
 
 p {
@@ -54,7 +54,7 @@ ol {
 }
 
 a, a:hover {
-  color: #FF4E00;
+  color: #F61067;
 }
 /* ----- End base styles for html tags ----- ----- */
 
@@ -81,7 +81,7 @@ a, a:hover {
 /* ----- Base button styling ----- */
 .btn {
   transition-property: all;
-  transition-duration: 0.11s;
+  transition-duration: 110ms;
   -moz-transition-duration: 0.11s;
   border-radius: 3px;
   padding: 0.2em 1.11em;
@@ -114,6 +114,7 @@ a, a:hover {
   padding-top: 6em;
   background: #ffffff;
   min-height: 100vh;
+  min-width: 100%;
 }
 
 /* ===== End Custom Classes ===== */
