--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue';
   color: #1B1B1E;
   font-weight: 700;
-  line-height: 90%;
+  line-height: 80%;
 }
 
 h1 {
@@ -111,7 +111,7 @@ a, a:hover {
 
 /* ----- Generic base styling for pages (Routes) ----- */
 .page-wrapper {
-  padding-top: 6em;
+  padding: 8rem 1rem 6rem 1rem;
   background: #ffffff;
   min-height: 100vh;
   min-width: 100%;
