more nav fine tuning, adding styling

--- a/src/components/SideNav/index.css
+++ b/src/components/SideNav/index.css
@@ -6,19 +6,22 @@
     z-index: 500;
     top: 2rem;
     right: 2rem;
-    padding: 0.2em 0.5em 0.2em 0.5em;
+    padding: 0.2em 0.75em 0.2em 0.75em;
     font-size: 1rem;
-    background: #F61067;
-    color: white;
-    border: 1px solid #F61067;
-    border-radius: 3px;
+    background: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 50px;
     cursor: pointer;
     transition: 110ms;
 }
 
+
+/* pink 44e5e7 */
 /* ----- Nav Icon > Hover ----- */
 .nav-icon:hover {
-    filter: invert(0.1);
+    /* filter: invert(0.1); */
+    color: black;
 }
 
 /* -----  Nav Modal ----- */
@@ -42,20 +45,23 @@
 /* -----  Nav Modal > Active ----- */
 .is-nav-modal-active {
     pointer-events: all;
-    opacity: 0.8;
+    opacity: 0.7;
     /* transition: 280ms; */
     cursor: pointer;
   }
 
   /* ----- Nav Body ----- */
 .nav__body {
-    background: rgba(0, 0, 0, 1);
-    width: 270px;
+    /* background: rgba(0, 0, 0, 1); */
+    /* background: rgba(0, 0, 0, 0.678); */
+    background: black;
+    /* border-left: 1px solid black; */
+    width: 240px;
     height: 100vh;
     padding: 8rem 3rem;
     position: fixed;
     z-index: 1000;
-    right: -290px;
+    right: -240px;
     top: 0;
     transition-property: transform;
     transition-duration: 400ms;
@@ -70,7 +76,7 @@
 
 /* ----- Nav Body Active (opened) ----- */
 .is-nav-open {
-    transform: translateX(-280px);
+    transform: translateX(-240px);
     /* opacity: 1; */
 }
 
@@ -85,47 +91,49 @@
 /* ----- Nav List Container ----- */
 .nav-list {
     opacity: 0;
-    transition-property: opacity;
-    transition-duration: 300ms;
-    transition-delay: 200ms;
-    transition-timing-function: linear;
+    transition-property: opacity transfom !important;
+    transition-duration: 400ms;
+    transition-delay: 240ms;
+    transition-timing-function: ease;
+    transform: translateX(2em);
 }
 
 /* ----- Nav List Container > Active ----- */
 .is-nav-list-open {
     opacity: 1;
+    transform: translateX(0em);
 }
 
 /* ----- Nav Links ----- */
 .nav-link {
-    font-family: 'Bebas Neue', cursive;
+    /* font-family: 'Bebas Neue', cursive; */
     font-size: 1.5rem;
-    line-height: 1.25em;
+    line-height: 1.3em;
     font-weight: 500;
     text-decoration: none;
-    color: #FFFFFF;
+    color: white;
     opacity: 0.6;
     margin: 0;
     padding: 0 !important;
     display: block;
-    transition-duration: 300ms;
+    /* transition-duration: 300ms; */
 }
 
 /* ----- Nav Links > Hover ----- */
 .nav-link:hover {
     opacity: 1;
     text-decoration: none;
-    color: #FFFFFF;
+    color: white;
 }
 
 /* ----- Nav Links > Current Route ----- */
 .nav-link-active {
-    color: #00F0B5;
-    opacity: 0.6;
+    color: lightseagreen;
+    opacity: 0.8;
   }
 
   .nav-link-active:hover {
-    color: #00F0B5;
+    color: lightseagreen;
     opacity: 1;
   }
 
