--- a/src/components/SideNav/index.css
+++ b/src/components/SideNav/index.css
@@ -7,7 +7,6 @@
     top: 2rem;
     right: 2rem;
     padding: 0.2em 0.75em 0.2em 0.75em;
-    font-size: 1rem;
     background: none;
     color: black;
     border: 1px solid black;
@@ -20,7 +19,6 @@
 /* pink 44e5e7 */
 /* ----- Nav Icon > Hover ----- */
 .nav-icon:hover {
-    /* filter: invert(0.1); */
     color: black;
 }
 
@@ -46,23 +44,33 @@
 .is-nav-modal-active {
     pointer-events: all;
     opacity: 0.7;
-    /* transition: 280ms; */
     cursor: pointer;
   }
 
   /* ----- Nav Body ----- */
 .nav__body {
-    /* background: rgba(0, 0, 0, 1); */
-    /* background: rgba(0, 0, 0, 0.678); */
     background: black;
-    /* border-left: 1px solid black; */
-    width: 240px;
+    width: 200px;
     height: 100vh;
     padding: 8rem 3rem;
     position: fixed;
     z-index: 1000;
-    right: -240px;
+    right: -220px;
     top: 0;
+    transition-property: transform;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    -webkit-transition-property: transform;
+    -webkit-transition-duration: 300ms;
+    /* transition-delay: 100ms; */
+    -webkit-transition-timing-function: ease;
+    will-change: transform;
+    -webkit-will-change: transform;
+}
+
+/* ----- Nav Body Active (opened) ----- */
+.is-nav-open {
+    transform: translateX(-220px);
     transition-property: transform;
     transition-duration: 400ms;
     transition-timing-function: ease;
@@ -71,13 +79,6 @@
     -webkit-transition-timing-function: ease;
     will-change: transform;
     -webkit-will-change: transform;
-    /* opacity: 0.6; */
-}
-
-/* ----- Nav Body Active (opened) ----- */
-.is-nav-open {
-    transform: translateX(-240px);
-    /* opacity: 1; */
 }
 
 
@@ -91,23 +92,25 @@
 /* ----- Nav List Container ----- */
 .nav-list {
     opacity: 0;
-    transition-property: opacity transfom !important;
-    transition-duration: 400ms;
-    transition-delay: 240ms;
+    transition-property: opacity  !important;
+    transition-duration: 0ms;
+    transition-delay: 0ms;
     transition-timing-function: ease;
-    transform: translateX(2em);
 }
 
 /* ----- Nav List Container > Active ----- */
 .is-nav-list-open {
     opacity: 1;
-    transform: translateX(0em);
+    transition-property: opacity transfom !important;
+    transition-duration: 300ms;
+    transition-delay: 300ms;
+    transition-timing-function: ease;
 }
 
 /* ----- Nav Links ----- */
 .nav-link {
     /* font-family: 'Bebas Neue', cursive; */
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     line-height: 1.3em;
     font-weight: 500;
     text-decoration: none;
