--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ Components should be placed in their own directories with stylesheets for each. 
 /* ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== = */
 
 /* Import Google Fonts here. */
-@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
 /* ----- Begin base styles for html tags ----- --- */
 
 code {
@@ -25,18 +25,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgba(27, 27, 30, 0.815);
-  font-size: 18px;
+  font-size: 14px;
+  /* padding-left: 90px; Offset for fixed Nav */
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bebas Neue';
+  /* font-family: 'Bebas Neue'; */
+  font-family: 'Questrial', sans-serif;
   color: #1B1B1E;
   font-weight: 700;
   line-height: 80%;
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 4rem;
   color: #5E239D;
 }
 
