--- a/src/routes/7-pageSandbox/index.css
+++ b/src/routes/7-pageSandbox/index.css
@@ -12,9 +12,9 @@
 .overlay-is-active {
     transform: translateX(0vw);
     transition-property: transform;
-    transition-duration: 400ms;
-    transition-delay: 200ms;
-    transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    transition-duration: 800ms;
+    transition-delay: 120ms;
+    transition-timing-function: cubic-bezier(0.85, 0.135, 0.15, 1);
 }
 
 .sectionOne {
@@ -39,16 +39,16 @@
     font-size: 1rem;
     font-weight: 700;
     color: white;
-    transform: translateY(2rem);
+    /* transform: translateY(2rem); */
 
     opacity: 0;
 }
 
 .header-is-active {
-    transition-property: opacity, transform;
-    transition-delay: 400ms;
-    transition-duration: 900ms;
-    transform: translateY(0rem);
+    transition-property: opacity;
+    transition-delay: 650ms;
+    transition-duration: 1300ms;
+    /* transform: translateY(0rem); */
     opacity: 1;
 }
 
@@ -63,14 +63,14 @@
 
 .overly__body {
     opacity: 0;
-    transform: translateY(1rem);
+    /* transform: translateY(1rem); */
 }
 
 .overly__body-is-active {
-    transition-property: opacity, transform;
-    transition-delay: 700ms;
-    transition-duration: 400ms;
-    transform: translateY(0rem);
+    transition-property: opacity;
+    transition-delay: 740ms;
+    transition-duration: 1300ms;
+    /* transform: translateY(0rem); */
     opacity: 1;
 }
 
@@ -94,7 +94,7 @@
 }
 
 .sectionOneBlock-is-active {
-    transition: transform 300ms;
+    transition: transform 770ms;
     transform: translateX(100vw);
-    transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 1);
 }
