--- a/src/routes/8-pageSandbox/index.css
+++ b/src/routes/8-pageSandbox/index.css
@@ -17,12 +17,12 @@
     z-index: 500;
     background: rgb(34, 34, 34);
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden !important;
     transform: translateX(100vw);
-    transition: 1600ms;
-    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+    transition: 1200ms;
+    transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
     opacity: 1;
     /* transition-delay: 200ms; */
 }
@@ -30,43 +30,48 @@
 .nav-content.active {
     opacity: 1;
     transform: translateX(0%);
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .nav-elements {
     position: absolute;
     bottom: 10rem;
     right: 3rem;
-    opacity: 0.8;
+    opacity: 0;
     color: rgb(223, 223, 226);
     font-size: 8rem;
     font-weight: 700;
     line-height: 0.8em;
     letter-spacing: -0.08em;
-   transform: translateX(-100vw);
-   transition: 1600ms;
-   transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+   transform: translateX(-100%);
+   transition: 1200ms;
+   transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
+   
    /* transition-timing-function: ease; */
 }
 
 .nav-elements.active {
     transform: translateX(0);
     opacity: 1;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .nav-elements div {
     transform: translateX(1em);
-    opacity: 0.8;
-    transition-duration: 300ms;
+    opacity: 0.6;
+    /* transition-duration: 300ms; */
     cursor: pointer;
-    transition: 2000ms;
+    transition: 1800ms;
     transition-timing-function: ease;
 }
 
 .nav-elements.active div {
     transform: translateX(0);
+    
 }
 
 .nav-elements div:hover {
+    transition-duration: 300ms;
     transform: translateX(0em);
 opacity: 1;
 }
