--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ Components should be placed in their own directories with stylesheets for each. 
 /* ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== ===== = */
 
 /* Import Google Fonts here. */
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,700,800,900&display=swap');
 /* ----- Begin base styles for html tags ----- --- */
 
 code {
