--- a/src/routes/8-pageSandbox/index.css
+++ b/src/routes/8-pageSandbox/index.css
@@ -1,33 +1,37 @@
 .wrapper {
-    min-height: 100vh;
-    width: 100vw;
+    /* min-height: 100vh;
+    width: 100vw; */
+    /* padding-top: 10rem; */
 }
 
 .nav-trigger {
     position: fixed;
-    z-index: 1000;
-    bottom: 2rem;
-    right: 2rem;
+    z-index: 2000;
+    top: 2rem;
+    left: 2rem;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .nav-content {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 500;
-    background: rgb(34, 34, 34);
+    z-index: 1000;
+    background: rgb(31, 30, 30);
     padding: 0;
     width: 100%;
     height: 100vh;
     overflow: hidden !important;
     transform: translateX(100vw);
-    transition: 1200ms;
+    transition: 800ms;
     transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
     opacity: 1;
     /* transition-delay: 200ms; */
 }
 
 .nav-content.active {
+    transition: 1200ms;
     opacity: 1;
     transform: translateX(0%);
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
@@ -38,19 +42,20 @@
     bottom: 10rem;
     right: 3rem;
     opacity: 0;
-    color: rgb(223, 223, 226);
+    color: whitesmoke;
     font-size: 8rem;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 0.8em;
-    letter-spacing: -0.08em;
+    letter-spacing: -0.02em;
    transform: translateX(-100%);
-   transition: 1200ms;
+   transition: 800ms;
    transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
    
    /* transition-timing-function: ease; */
 }
 
 .nav-elements.active {
+    transition: 1200ms;
     transform: translateX(0);
     opacity: 1;
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
@@ -58,21 +63,43 @@
 
 .nav-elements div {
     transform: translateX(1em);
-    opacity: 0.6;
+    opacity: 0.3;
     /* transition-duration: 300ms; */
     cursor: pointer;
     transition: 1800ms;
     transition-timing-function: ease;
 }
 
+.nav-elements p {
+    opacity: 0;
+    font-size: 1.55rem;
+    font-weight: 400 !important;
+    line-height: 0.95;
+    margin: none;
+    color: rgb(202, 216, 11);
+    transition-property: transform, opacity;
+    transition-duration: 800ms, 400ms;
+    transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
+    transform: translateX(-20vw);
+}
+
+.nav-elements.active p {
+    transition-property: transform, opacity;
+    transition-duration: 1200ms, 4400ms;
+    opacity: 0.9;
+    transform: translateX(0vw);
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1), none;
+}
+
 .nav-elements.active div {
     transform: translateX(0);
-    
+    /* transition-duration: 300ms; */
 }
 
 .nav-elements div:hover {
-    transition-duration: 300ms;
+    transition-duration: 0ms;
     transform: translateX(0em);
-opacity: 1;
+    opacity: 0.9;
+    color: rgb(245, 245, 245);
 }
 
