--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
   /* set units here for future scaling with em and rem */ 
   background: #222222;
   color: white;
-  font-size: 14px;
+  font-size: 1vw;
 }
 
 body {
