--- a/src/routes/8-pageSandbox/index.css
+++ b/src/routes/8-pageSandbox/index.css
@@ -1,9 +1,3 @@
-.wrapper {
-    /* min-height: 100vh;
-    width: 100vw; */
-    /* padding-top: 10rem; */
-}
-
 .nav-trigger {
     display: flex;
     justify-content: center;
@@ -16,7 +10,7 @@
     position: fixed;
     z-index: 2000;
     top: 2rem;
-    left: 2rem;
+    right: 2rem;
     font-weight: 500;
     cursor: pointer;
     transition-duration: 1400ms;
@@ -27,7 +21,7 @@
 }
 
 .nav-trigger.active {
-    transition-duration: 1800ms;
+    transition-duration: 800ms;
     border: 1px solid  rgba(245, 245, 245, 0.123);
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
 }
@@ -134,22 +128,23 @@
     opacity: 0;
     font-size: 1.35rem;
     /* padding-left: 0.5rem; */
-    font-weight: 400 !important;
-    line-height: 1.05;
+    font-weight: 500 !important;
+    line-height: 1.05em;
     margin: none;
-    color: rgb(202, 216, 11);
+    color: rgba(202, 214, 39, 0.856);
     transition-property: transform, opacity;
     transition-duration: 800ms, 400ms;
     transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
-    transform: translateX(-2vw);
+    transform: translateX(0vw);
 }
 
 .nav-elements.active p {
     transition-property: transform, opacity;
-    transition-duration: 800ms, 1400ms;
+    transition-duration: 1800ms, 1800ms;
+    /* transition-delay: 200ms, 400ms; */
     opacity: 0.9;
     transform: translateX(0.6vw);
-    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1), none;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1), ease;
 }
 
 .nav-elements.active div {
