--- a/src/routes/8-pageSandbox/index.css
+++ b/src/routes/8-pageSandbox/index.css
@@ -1,3 +1,12 @@
+.logo {
+    position: fixed;
+    left: 4rem;
+    top: 2rem;
+    z-index: 4000;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
 .nav-trigger {
     display: flex;
     justify-content: center;
@@ -35,7 +44,7 @@
 
 .nav-trigger_text div {
     transition-delay: 0ms;
-    transition-duration: 1000ms;
+    transition-duration: 600ms;
     transform: translateY(0em);
 }
 
@@ -66,7 +75,7 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    background: rgb(31, 30, 30);
+    background: rgb(29, 29, 29);
     padding: 0;
     width: 100vw;
     height: 100vh;
@@ -74,41 +83,37 @@
     transform: translateX(100vw);
     transition: 800ms;
     transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
-    opacity: 1;
-    /* transition-delay: 200ms; */
 }
 
 .nav-content.active {
     transition: 1200ms;
-    opacity: 1;
-    transform: translateX(0%);
+    /* opacity: 1; */
+    transform: translateX(0vw);
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+    /* transform: rotate(90deg); */
 }
 
 .nav-elements {
-    /* background-color: rgb(0, 0, 0); */
-    
-    /* padding: 1em; */
     position: absolute;
-    /* border-top-left-radius: 0.5em; */
-    bottom: 1em;
-    right: 1em;
+    bottom: 0.3em;
+    left: 0.4em;
     opacity: 0;
     color: whitesmoke;
     font-size: 10rem;
     font-weight: 900;
     line-height: 0.8em;
-    
-   transform: translateX(-100%);
-   transition: 800ms;
+    transition-property: transform, opacity;
+   transform: translateX(-100vw);
+   transition-delay: 0ms, 0ms;
+   transition-duration: 800ms, 400ms;
    transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
-   
-   /* transition-timing-function: ease; */
 }
 
 .nav-elements.active {
-    transition: 1200ms;
-    transform: translateX(0);
+    transition-property: transform, opacity;
+    transition-delay: 0ms, 0ms;
+    transition-duration: 1200ms, 1400ms;
+    transform: translateX(0vw);
     opacity: 1;
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
 }
@@ -116,14 +121,25 @@
 .nav-elements div {
     letter-spacing: -0.01em;
     text-transform: uppercase;
-    transform: translateX(1em);
-    opacity: 0.3;
+    transform: translateX(0em);
+    opacity: 0.4;
     /* transition-duration: 300ms; */
     cursor: pointer;
-    transition: 1800ms;
-    transition-timing-function: ease;
+    transition: 1200ms;
+    /* transition-timing-function: ease; */
 }
 
+.nav-elements div:hover {
+    transition-duration: 0ms;
+    transform: translateX(0em);
+    opacity: 0.8;
+    color: rgb(245, 245, 245);
+}
+
+.nav-elements.active div {
+    transform: translateX(0);
+    /* transition-duration: 300ms; */
+}
 .nav-elements p {
     opacity: 0;
     font-size: 1.35rem;
@@ -131,31 +147,22 @@
     font-weight: 500 !important;
     line-height: 1.05em;
     margin: none;
-    color: rgba(202, 214, 39, 0.856);
+    color: #ffffff;
     transition-property: transform, opacity;
     transition-duration: 800ms, 400ms;
     transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
-    transform: translateX(0vw);
+    transform: translateX(0.6vw);
 }
 
 .nav-elements.active p {
     transition-property: transform, opacity;
-    transition-duration: 1800ms, 1800ms;
+    transition-duration: 1200ms, 2200ms;
     /* transition-delay: 200ms, 400ms; */
-    opacity: 0.9;
+    opacity: 0.8;
     transform: translateX(0.6vw);
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1), ease;
 }
 
-.nav-elements.active div {
-    transform: translateX(0);
-    /* transition-duration: 300ms; */
-}
 
-.nav-elements div:hover {
-    transition-duration: 0ms;
-    transform: translateX(0em);
-    opacity: 0.9;
-    color: rgb(245, 245, 245);
-}
+
 
